# imu-calibr-withoutROS

./: CMakeLists.txt  README.md  imu_calibr.cpp  imu_calibr.h  main.cpp  record.cpp
acc_lib/: allan_acc.h
gyr_lib/: allan_gyr.h
